feat: Add casts, genres, director to film and update docs
