# internal/film/endpoints/addFilm.go
@@ -44,13 +44,20 @@ func MakeAddFilmEndpoint(s domain.Service) endpoint.Endpoint {
 			genres = append(genres, genre)
 		}
 
+		// Prepare casts
+		var casts []models.Cast
+		for _, castName := range reqForm.Casts {
+			cast := models.Cast{Name: castName}
+			casts = append(casts, cast)
+		}
+
 		// Prepare a film model
 		model := &models.Film{
 			CreatorID:   parseCreatorUUID,
 			Title:       reqForm.Title,
-			Director:    reqForm.Director,
+			Director:    models.Director{Name: reqForm.Director},
 			ReleaseDate: parseDate,
-			Cast:        reqForm.Cast,
+			Casts:       casts,
 			Synopsis:    reqForm.Synopsis,
 			Genres:      genres,
 		}
@@ -60,7 +67,9 @@ func MakeAddFilmEndpoint(s domain.Service) endpoint.Endpoint {
 			return AddFilmResponse{Err: errAddFilm}, nil
 		}
 
-		return AddFilmResponse{}, nil
+		return AddFilmResponse{
+			Item: domainFilmToItemFilm(model),
+		}, nil
 	}
 }
 
@@ -72,7 +81,7 @@ type AddFilmRequest struct {
 	Director    string   `json:"director" validate:"required,min=3,max=40" example:"John Doe"`
 	ReleaseDate string   `json:"releaseDate" validate:"required,customDate" example:"2021-01-01"`
 	Genres      []string `json:"genres" validate:"required,min=1,max=5,dive,min=3,max=100" example:"action,adventure,sci-fi"`
-	Cast        string   `json:"cast" validate:"required" example:"John Doe, Jane Doe, Foo Bar, Baz Quux"`
+	Casts       []string `json:"casts" validate:"required,min=1,max=10,dive,min=3,max=100" example:"John Doe, Jane Doe, Foo Bar, Baz Quux"`
 	Synopsis    string   `json:"synopsis" validate:"required,min=10,max=1000" example:"This is a synopsis."`
 }
 
@@ -102,8 +111,37 @@ func (r *AddFilmRequest) Validate() error {
 
 // AddFilmResponse is a response for AddFilm.
 type AddFilmResponse struct {
-	Err error `json:"err,omitempty" swaggerignore:"true"`
+	Item ItemFilm `json:"item,omitempty"`
+	Err  error    `json:"err,omitempty" swaggerignore:"true"`
 }
 
 // Failed implements response.Failed.
 func (r AddFilmResponse) Failed() error { return r.Err }
+
+// ItemFilm is a response for ViewFilm.
+type ItemFilm struct {
+	UUID        uuid.UUID `json:"uuid"`
+	Title       string    `json:"title"`
+	Director    string    `json:"director"`
+	Genres      []string  `json:"genres"`
+	ReleaseDate string    `json:"release_date"`
+	Casts       []string  `json:"casts"`
+	Synopsis    string    `json:"synopsis"`
+	CreatedAt   string    `json:"created_at"`
+	UpdatedAt   string    `json:"updated_at"`
+}
+
+// domainFilmToItemFilm is a method to convert domain Film to Item Film.
+func domainFilmToItemFilm(item *models.Film) ItemFilm {
+	return ItemFilm{
+		UUID:        item.UUID,
+		Title:       item.Title,
+		Director:    item.Director.Name,
+		Genres:      convertGenresToStrings(item.Genres),
+		ReleaseDate: item.ReleaseDate.Format(time.DateOnly),
+		Casts:       convertCastsToStrings(item.Casts),
+		Synopsis:    item.Synopsis,
+		CreatedAt:   time.Unix(item.CreatedAt, 0).Format(time.DateTime),
+		UpdatedAt:   time.Unix(item.UpdatedAt, 0).Format(time.DateTime),
+	}
+}
