# internal/film/endpoints/updateFilm.go
@@ -8,6 +8,7 @@ import (
 	"fmt"
 	"github.com/go-kit/kit/endpoint"
 	"github.com/google/uuid"
+	"strings"
 	"time"
 )
 
@@ -42,22 +43,39 @@ func MakeUpdateFilmEndpoint(s domain.Service) endpoint.Endpoint {
 			return AddFilmResponse{Err: err}, nil
 		}
 
+		// Prepare genres
+		var genres []models.Genre
+		for _, genreName := range reqForm.Genres {
+			genre := models.Genre{Name: strings.ToLower(genreName)}
+			genres = append(genres, genre)
+		}
+
+		// Prepare casts
+		var casts []models.Cast
+		for _, castName := range reqForm.Casts {
+			cast := models.Cast{Name: castName}
+			casts = append(casts, cast)
+		}
+
 		// Prepare a film model
 		model := &models.Film{
 			UUID:        parseUUID,
 			CreatorID:   parseCreatorUUID,
 			Title:       reqForm.Title,
-			Director:    reqForm.Director,
+			Director:    models.Director{Name: reqForm.Director},
 			ReleaseDate: parseDate,
-			Cast:        reqForm.Cast,
+			Casts:       casts,
 			Synopsis:    reqForm.Synopsis,
+			Genres:      genres,
 		}
 
 		if errUpdateFilm := s.UpdateFilm(ctx, model); errUpdateFilm != nil {
 			return UpdateFilmResponse{Err: errUpdateFilm}, nil
 		}
 
-		return UpdateFilmResponse{}, nil
+		return UpdateFilmResponse{
+			Item: domainFilmToItemFilm(model),
+		}, nil
 	}
 }
 
@@ -66,11 +84,12 @@ type UpdateFilmRequest struct {
 	UUID      string `json:"uuid" validate:"required,uuid4" swaggerignore:"true"`
 	CreatorID string `json:"creatorID" validate:"required,uuid4" swaggerignore:"true"`
 
-	Title       string `json:"title" validate:"required,min=3,max=100" example:"Garry Potter"`
-	Director    string `json:"director" validate:"required,min=3,max=40" example:"John Doe"`
-	ReleaseDate string `json:"releaseDate" validate:"required,customDate" example:"2021-01-01"`
-	Cast        string `json:"cast" validate:"required" example:"John Doe, Jane Doe, Foo Bar, Baz Quux"`
-	Synopsis    string `json:"synopsis" validate:"required,min=10,max=1000" example:"This is a synopsis."`
+	Title       string   `json:"title" validate:"required,min=3,max=100" example:"Garry Potter"`
+	Director    string   `json:"director" validate:"required,min=3,max=40" example:"John Doe"`
+	Genres      []string `json:"genres" validate:"required,min=1,max=5,dive,min=3,max=100" example:"action,adventure,sci-fi"`
+	ReleaseDate string   `json:"releaseDate" validate:"required,customDate" example:"2021-01-01"`
+	Casts       []string `json:"casts" validate:"required,min=1,max=10,dive,min=3,max=100" example:"John Doe, Jane Doe, Foo Bar, Baz Quux"`
+	Synopsis    string   `json:"synopsis" validate:"required,min=10,max=1000" example:"This is a synopsis."`
 }
 
 // Validate is a method to validate form.
@@ -99,7 +118,8 @@ func (r *UpdateFilmRequest) Validate() error {
 
 // UpdateFilmResponse is a response for UpdateAd.
 type UpdateFilmResponse struct {
-	Err error `json:"err,omitempty" swaggerignore:"true"`
+	Item ItemFilm `json:"item,omitempty"`
+	Err  error    `json:"err,omitempty" swaggerignore:"true"`
 }
 
 // Failed implements response.Failed.
