# internal/film/endpoints/viewFilm.go
@@ -33,7 +33,7 @@ func MakeViewFilmEndpoint(s domain.Service) endpoint.Endpoint {
 			return ViewFilmResponse{Err: errViewFilm}, nil
 		} else {
 			return ViewFilmResponse{
-				Item: domainFilmToItemFilm(item),
+				Item: domainFilmToItemViewFilm(item),
 			}, nil
 		}
 	}
@@ -57,20 +57,21 @@ func (r *ViewFilmRequest) Validate() error {
 
 // ViewFilmResponse is a response for ViewFilm.
 type ViewFilmResponse struct {
-	Item ItemFilm `json:"item,omitempty"`
-	Err  error    `json:"err,omitempty" swaggerignore:"true"`
+	Item ItemViewFilm `json:"item,omitempty"`
+	Err  error        `json:"err,omitempty" swaggerignore:"true"`
 }
 
 // Failed implements response.Failed.
 func (r ViewFilmResponse) Failed() error { return r.Err }
 
-// ItemFilm is a response for ViewFilm.
-type ItemFilm struct {
+// ItemViewFilm is a response for ViewFilm.
+type ItemViewFilm struct {
 	UUID        uuid.UUID   `json:"uuid"`
 	Title       string      `json:"title"`
 	Director    string      `json:"director"`
+	Genres      []string    `json:"genres"`
 	ReleaseDate string      `json:"release_date"`
-	Cast        string      `json:"cast"`
+	Casts       []string    `json:"casts"`
 	Synopsis    string      `json:"synopsis"`
 	CreatedAt   string      `json:"created_at"`
 	UpdatedAt   string      `json:"updated_at"`
@@ -83,14 +84,15 @@ type ItemCreator struct {
 	Username string    `json:"username"`
 }
 
-// domainFilmToItemFilm is a method to convert domain Film to Item Film.
-func domainFilmToItemFilm(item models.Film) ItemFilm {
-	return ItemFilm{
+// domainFilmToItemViewFilm is a method to convert domain Film to Item Film.
+func domainFilmToItemViewFilm(item models.Film) ItemViewFilm {
+	return ItemViewFilm{
 		UUID:        item.UUID,
 		Title:       item.Title,
-		Director:    item.Director,
+		Director:    item.Director.Name,
+		Genres:      convertGenresToStrings(item.Genres),
 		ReleaseDate: item.ReleaseDate.Format(time.DateOnly),
-		Cast:        item.Cast,
+		Casts:       convertCastsToStrings(item.Casts),
 		Synopsis:    item.Synopsis,
 		CreatedAt:   time.Unix(item.CreatedAt, 0).Format(time.DateTime),
 		UpdatedAt:   time.Unix(item.UpdatedAt, 0).Format(time.DateTime),
